UI: Rename 'x264 Preset' to 'Encoder Preset'
In the future, encoders other than x264 may end up filling this preset
list with their own values.

--- a/obs/forms/OBSBasicSettings.ui
+++ b/obs/forms/OBSBasicSettings.ui
@@ -540,7 +540,7 @@
                       <bool>true</bool>
                      </property>
                      <property name="text">
-                      <string>Basic.Settings.Output.X264Preset</string>
+                      <string>Basic.Settings.Output.EncoderPreset</string>
                      </property>
                     </widget>
                    </item>
